Fixing the Streak management